styles/style.css
.header {
  padding: 95px 0;
}

.header .container {
  display: grid;
  grid-template-columns: 1fr min-content 1fr;
  align-items: center;
}

.header__menu-list {
  display: flex;
  gap: 32px;
  font-size: 18px;
  font-weight: 400;
}

.header__menu-item:not(:first-child)::before {
  content: '◦';
  display: inline-block;
  margin-right: 12px;
}

.header__link {
  border-bottom: 1px solid #000000;
}

.header__link_active {
  border-bottom: none;
}

.header__logo {
  display: block;
  justify-self: center;
  width: 148px;
  height: 105px;
}

.header__logo-image {
  width: 100%;
  height: 100%;
}

.address {
  font-style: normal;
  font-size: 18px;
  line-height: 24px;
}

.header__contacts {
  justify-self: end;
}

.address__link {
  border-bottom: 1px solid currentColor;
}

.cover {
  position: relative;
  color: #ffffff;
  background-image: url('../images/cover.jpg');
  background-size: cover;
  background-position: center;
}

.cover .container {
  position: relative;
  z-index: 2;
  padding-top: 165px;
  padding-bottom: 50px;
}

.cover__title {
  margin: 0;
  font-size: 100px;
  font-weight: 700;
  letter-spacing: 0.3em;
  line-height: 115%;
  text-transform: uppercase;
}

.cover__title-word {
  display: block;
}

.cover__title-word_align_left {
  text-align: left;
}

.cover__title-word_align_center {
  text-align: center;
}

.cover__title-word_align_right {
  text-align: right;
}

.cover__description {
  margin-top: 135px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 30px;
}

.cover__description-text {
  font-size: 22px;
  word-spacing: 18px;
  text-transform: uppercase;
}

.cover__button {
  font-size: 22px;
  text-transform: uppercase;
  background: transparent;
  border: 1px solid #ffffff;
  padding: 12px 32px;
  color: inherit;
}

.lots {
  padding: 180px 0;
}

.lots__title {
  margin: 0 0 27px;
  font-size: 40px;
  font-weight: 700;
  text-transform: uppercase;
}

.lots__grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 25px;
  margin: 0 0 30px;
  padding: 0;
}

.card-link {
  display: block;
  height: 100%;
}

.card {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 563px;
  color: #ffffff;
  background-size: cover;
  background-position: center;
  padding: 50px 40px;
}

.card__content {
  position: relative;
  z-index: 2;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100%;
}

.card__title {
  margin: 0;
  font-size: 22px;
  font-weight: 700;
  text-transform: uppercase;
  text-decoration: underline;
}

.card__text {
  margin: 0;
  font-size: 20px;
  line-height: 120%;
}

.card_type_film {
  background-image: url('../images/card-lot-01.jpg');
}

.card_type_book {
  background-image: url('../images/card-lot-02.jpg');
}

.card_type_picture {
  background-image: url('../images/card-lot-03.jpg');
}

.lots__more-link {
  font-size: 20px;
  border-bottom: 1px solid #000000;
}

.about {
  padding-bottom: 180px;
}

.about .container {
  display: grid;
  grid-template-columns: 334px 1fr;
  gap: 25px;
}

.about__logo-column {
  display: flex;
  justify-content: center;
}

.about__logo-circle {
  width: 240px;
  height: 240px;
  background: #000000;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 35px;
}

.about__logo-image {
  width: 148px;
  height: 114px;
}

.about__title {
  margin: 136px 0 100px;
  font-size: 40px;
  font-weight: 700;
  text-transform: uppercase;
}

.about__text {
  display: flex;
  flex-direction: column;
  gap: 24px;
  font-size: 20px;
  line-height: 24px;
}

.footer {
  padding: 95px 0;
}

.footer .container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: start;
}

.footer__menu-list {
  text-align: center;
  font-size: 18px;
}

.footer__link {
  border-bottom: 1px solid #000000;
}

.footer__link_active {
  border-bottom: none;
}

.footer__social-list {
  display: flex;
  justify-content: flex-end;
  gap: 48px;
}

.footer__social-link {
  display: block;
  width: 48px;
  height: 48px;
}

.footer__social-icon {
  width: 48px;
  height: 48px;
}

